// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Page|PageBlockList Default 1`] = `
.c0 {
  font-weight: normal;
  width: calc(100% - 50px);
}

.c3 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  padding: 40px 0;
  -webkit-overflow-scrolling: touch;
}

.c4 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
}

.c5 a,
.c5 div {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgba(255,255,255,0.75);
  display: block;
}

.c6 {
  margin: 10px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  color: #FFF;
  font-size: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 12px 0;
}

.c1 {
  word-break: break-word;
}

.c2 {
  word-break: break-word;
}

.c21 {
  height: 155px;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c22 {
  bottom: 0;
  width: 100%;
  padding: 40px 0 36px;
  position: fixed;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c24 {
  width: calc(50% - 5px);
  max-width: 240px;
}

.c8 {
  display: none;
}

.c9 {
  margin-right: 20px;
  overflow: hidden;
}

.c10 {
  color: #FFF;
}

.c11 {
  color: #FFF;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c13 {
  width: 20%;
}

.c15 {
  width: 60%;
  text-align: center;
  color: #71737e;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 24px;
}

.c16 {
  width: 20%;
}

.c20 {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: move;
  touch-action: none;
}

@media (min-width:1050px) {
  .c0 {
    display: none;
  }
}

@media (min-width:1050px) {
  .c3 {
    padding-bottom: 20px;
    max-height: calc(100vh - 154px);
  }
}

@media (min-width:1050px) {
  .c23 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1050px) {
  .c22 {
    position: fixed;
    width: calc(100% - 40px);
    background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
    width: 1000px;
  }
}

@media (min-width:1050px) {
  .c24 {
    width: 240px;
  }
}

@media (min-width:1050px) {
  .c14 {
    display: block;
  }
}

@media (min-width:1050px) {
  .c8 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin: 60px 0 40px 0;
    min-height: 63px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className=""
  >
    <div
      className="c0"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className=""
          >
            <h2
              className="c1"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Blocks
            </h2>
            <h1
              className="c2"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderOpenMenuBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 10 60"
          >
            <path
              d="M5 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "absolute",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className=""
        >
          <div
            className=""
          >
            <h2
              className="c1"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Blocks
            </h2>
            <h1
              className="c2"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <a
                href="/project/"
                id="projectsNavBtn"
                onClick={[Function]}
              >
                Projects
              </a>
            </div>
            <div
              className="c5"
            >
              <a
                href="/user/"
                id="usersNavBtn"
                onClick={[Function]}
              >
                Users
              </a>
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <a
                href="/settings"
                id="settingsNavBtn"
                onClick={[Function]}
              >
                Settings
              </a>
            </div>
            <div
              className="c5"
            >
              <div
                onClick={[Function]}
              >
                Log out
              </div>
            </div>
          </div>
          <div
            className="c6"
          >
            <a
              className="c7"
              href="/"
              id="aboutNavBtn"
              onClick={[Function]}
            >
              About Schema CMS
            </a>
            <a
              className="c7"
              href="/"
              id="apiNavBtn"
              onClick={[Function]}
            >
              API Doc
            </a>
            <a
              className="c7"
              href="/"
              id="repositoryNavBtn"
              onClick={[Function]}
            >
              GitHub Repository
            </a>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        <h2
          className="c10"
          id="desktopHeaderTitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Blocks
        </h2>
        <h1
          className="c11"
          id="desktopHeaderSubtitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          Overview
        </h1>
      </div>
      <div
        className=""
      />
    </div>
    <div
      className="c12"
    >
      <div
        className="c13"
      >
        <div
          className="c14"
        >
          <button
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#FFF",
                "border": "none",
                "borderRadius": "48px",
                "color": "#000",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#000",
                  "height": "60px",
                  "shapeRendering": "crispEdges",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="c15"
      >
        2 Blocks
      </div>
      <div
        className="c16"
      />
    </div>
    <form
      onSubmit={[Function]}
    >
      <span>
        <div
          id="blocksCheckboxGroup"
          style={
            Object {
              "borderTop": "1px solid #2F2F36",
              "display": "flex",
              "flexDirection": "column",
            }
          }
        >
          <div
            className="c17"
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "borderBottom": "1px solid #2F2F36",
                  "color": "#FFF",
                  "display": "flex",
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "space-between",
                  "width": "100%",
                }
              }
            >
              <input
                aria-hidden={true}
                checked={true}
                id="checkbox-0"
                name="pageBlocks"
                onChange={[Function]}
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                  }
                }
                type="checkbox"
                value="1"
              />
              <span
                style={
                  Object {
                    "overflow": "hidden",
                    "textOverflow": "ellipsis",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                <div
                  className="c18"
                >
                  <span>
                    <div
                      className="c19"
                    >
                      <svg
                        style={
                          Object {
                            "fill": "#FFF",
                            "height": "60px",
                            "marginRight": 20,
                            "width": 10,
                          }
                        }
                        viewBox="0 0 10 60"
                      >
                        <path
                          d="M5 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
                          fillRule="evenodd"
                        />
                      </svg>
                    </div>
                  </span>
                  <a
                    className="c20"
                    href="/block/1"
                    onClick={[Function]}
                  >
                    block 1
                  </a>
                </div>
              </span>
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  }
                }
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": "30px",
                      "width": "30px",
                    }
                  }
                  viewBox="0 0 30 30"
                >
                  <path
                    d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                    fillRule="evenodd"
                  />
                </svg>
                <label
                  htmlFor="checkbox-0"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <svg
                    stroke="#000"
                    style={
                      Object {
                        "height": "30px",
                        "stroke": "#FFF",
                        "width": "30px",
                      }
                    }
                    viewBox="0 0 30 30"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M20.455 7.5H7.5v15h15v-6.136"
                        strokeLinecap="square"
                        strokeLinejoin="round"
                      />
                      <path
                        d="M11 12l5 5L26 7"
                        strokeWidth={3}
                      />
                    </g>
                  </svg>
                </label>
              </div>
            </div>
          </div>
          <div
            className="c17"
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "borderBottom": "1px solid #2F2F36",
                  "color": "#FFF",
                  "display": "flex",
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "space-between",
                  "width": "100%",
                }
              }
            >
              <input
                aria-hidden={true}
                checked={false}
                id="checkbox-1"
                name="pageBlocks"
                onChange={[Function]}
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                  }
                }
                type="checkbox"
                value="2"
              />
              <span
                style={
                  Object {
                    "overflow": "hidden",
                    "textOverflow": "ellipsis",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                <div
                  className="c18"
                >
                  <span>
                    <div
                      className="c19"
                    >
                      <svg
                        style={
                          Object {
                            "fill": "#FFF",
                            "height": "60px",
                            "marginRight": 20,
                            "width": 10,
                          }
                        }
                        viewBox="0 0 10 60"
                      >
                        <path
                          d="M5 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
                          fillRule="evenodd"
                        />
                      </svg>
                    </div>
                  </span>
                  <a
                    className="c20"
                    href="/block/2"
                    onClick={[Function]}
                  >
                    block 2
                  </a>
                </div>
              </span>
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  }
                }
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": "30px",
                      "width": "30px",
                    }
                  }
                  viewBox="0 0 30 30"
                >
                  <path
                    d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                    fillRule="evenodd"
                  />
                </svg>
                <label
                  htmlFor="checkbox-1"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <svg
                    style={
                      Object {
                        "height": "30px",
                        "stroke": "#FFF",
                        "width": "30px",
                      }
                    }
                    viewBox="0 0 30 30"
                  >
                    <path
                      d="M7.5 7.5h15v15h-15z"
                      fill="none"
                    />
                  </svg>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c21"
        >
          <div
            className="c22"
          >
            <div
              className="c23"
            >
              <button
                disabled={false}
                onClick={[Function]}
                style={
                  Object {
                    "backgroundColor": "#1d1d20",
                    "border": "none",
                    "borderRadius": "48px",
                    "color": "#FFF",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fill": "#FFF",
                    "fontSize": "18px",
                    "height": "60px",
                    "margin": "0",
                    "minHeight": "48px",
                    "outline": "none",
                    "padding": "0",
                    "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                    "width": "60px",
                  }
                }
                type="button"
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": "60px",
                      "width": "60px",
                    }
                  }
                  viewBox="0 0 60 60"
                >
                  <path
                    d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
                  />
                </svg>
              </button>
              <button
                className="c24"
                disabled={true}
                style={
                  Object {
                    "backgroundColor": "#1d1d20",
                    "border": "none",
                    "borderRadius": "48px",
                    "color": "#71737e",
                    "cursor": "default",
                    "display": "inline-block",
                    "fill": "#FFF",
                    "fontSize": "18px",
                    "margin": "0",
                    "minHeight": "48px",
                    "outline": "none",
                    "padding": "0",
                    "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                  }
                }
                type="submit"
              >
                Save
              </button>
            </div>
          </div>
        </div>
      </span>
    </form>
  </div>
</div>
`;

exports[`Storyshots Page|PageBlockList No data 1`] = `
.c0 {
  font-weight: normal;
  width: calc(100% - 50px);
}

.c3 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  padding: 40px 0;
  -webkit-overflow-scrolling: touch;
}

.c4 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
}

.c5 a,
.c5 div {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgba(255,255,255,0.75);
  display: block;
}

.c6 {
  margin: 10px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  color: #FFF;
  font-size: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 12px 0;
}

.c1 {
  word-break: break-word;
}

.c2 {
  word-break: break-word;
}

.c18 {
  height: 155px;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c19 {
  bottom: 0;
  width: 100%;
  padding: 40px 0 36px;
  position: fixed;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c21 {
  width: calc(50% - 5px);
  max-width: 240px;
}

.c8 {
  display: none;
}

.c9 {
  margin-right: 20px;
  overflow: hidden;
}

.c10 {
  color: #FFF;
}

.c11 {
  color: #FFF;
}

.c17 {
  color: #FFF;
  text-align: center;
  padding: 50px 10px;
  font-weight: 200;
  font-size: 20px;
}

.c13 {
  width: 20%;
}

.c15 {
  width: 60%;
  text-align: center;
  color: #71737e;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 24px;
}

.c16 {
  width: 20%;
}

@media (min-width:1050px) {
  .c0 {
    display: none;
  }
}

@media (min-width:1050px) {
  .c3 {
    padding-bottom: 20px;
    max-height: calc(100vh - 154px);
  }
}

@media (min-width:1050px) {
  .c20 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1050px) {
  .c19 {
    position: fixed;
    width: calc(100% - 40px);
    background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
    width: 1000px;
  }
}

@media (min-width:1050px) {
  .c21 {
    width: 240px;
  }
}

@media (min-width:1050px) {
  .c14 {
    display: block;
  }
}

@media (min-width:1050px) {
  .c8 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin: 60px 0 40px 0;
    min-height: 63px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className=""
  >
    <div
      className="c0"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className=""
          >
            <h2
              className="c1"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Blocks
            </h2>
            <h1
              className="c2"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderOpenMenuBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 10 60"
          >
            <path
              d="M5 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "absolute",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className=""
        >
          <div
            className=""
          >
            <h2
              className="c1"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Blocks
            </h2>
            <h1
              className="c2"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <a
                href="/project/"
                id="projectsNavBtn"
                onClick={[Function]}
              >
                Projects
              </a>
            </div>
            <div
              className="c5"
            >
              <a
                href="/user/"
                id="usersNavBtn"
                onClick={[Function]}
              >
                Users
              </a>
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <a
                href="/settings"
                id="settingsNavBtn"
                onClick={[Function]}
              >
                Settings
              </a>
            </div>
            <div
              className="c5"
            >
              <div
                onClick={[Function]}
              >
                Log out
              </div>
            </div>
          </div>
          <div
            className="c6"
          >
            <a
              className="c7"
              href="/"
              id="aboutNavBtn"
              onClick={[Function]}
            >
              About Schema CMS
            </a>
            <a
              className="c7"
              href="/"
              id="apiNavBtn"
              onClick={[Function]}
            >
              API Doc
            </a>
            <a
              className="c7"
              href="/"
              id="repositoryNavBtn"
              onClick={[Function]}
            >
              GitHub Repository
            </a>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        <h2
          className="c10"
          id="desktopHeaderTitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Blocks
        </h2>
        <h1
          className="c11"
          id="desktopHeaderSubtitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          Overview
        </h1>
      </div>
      <div
        className=""
      />
    </div>
    <div
      className="c12"
    >
      <div
        className="c13"
      >
        <div
          className="c14"
        >
          <button
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#FFF",
                "border": "none",
                "borderRadius": "48px",
                "color": "#000",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#000",
                  "height": "60px",
                  "shapeRendering": "crispEdges",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="c15"
      >
        0 Blocks
      </div>
      <div
        className="c16"
      />
    </div>
    <form
      onSubmit={[Function]}
    >
      <span>
        <div
          className="c17"
        >
           
        </div>
        <div
          className="c18"
        >
          <div
            className="c19"
          >
            <div
              className="c20"
            >
              <button
                disabled={false}
                onClick={[Function]}
                style={
                  Object {
                    "backgroundColor": "#1d1d20",
                    "border": "none",
                    "borderRadius": "48px",
                    "color": "#FFF",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fill": "#FFF",
                    "fontSize": "18px",
                    "height": "60px",
                    "margin": "0",
                    "minHeight": "48px",
                    "outline": "none",
                    "padding": "0",
                    "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                    "width": "60px",
                  }
                }
                type="button"
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": "60px",
                      "width": "60px",
                    }
                  }
                  viewBox="0 0 60 60"
                >
                  <path
                    d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
                  />
                </svg>
              </button>
              <button
                className="c21"
                disabled={true}
                style={
                  Object {
                    "backgroundColor": "#1d1d20",
                    "border": "none",
                    "borderRadius": "48px",
                    "color": "#71737e",
                    "cursor": "default",
                    "display": "inline-block",
                    "fill": "#FFF",
                    "fontSize": "18px",
                    "margin": "0",
                    "minHeight": "48px",
                    "outline": "none",
                    "padding": "0",
                    "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                  }
                }
                type="submit"
              >
                Save
              </button>
            </div>
          </div>
        </div>
      </span>
    </form>
  </div>
</div>
`;

exports[`Storyshots Page|PageBlockList With one block 1`] = `
.c0 {
  font-weight: normal;
  width: calc(100% - 50px);
}

.c3 {
  overflow: auto;
  max-height: calc(100vh - 70px);
  padding: 40px 0;
  -webkit-overflow-scrolling: touch;
}

.c4 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  line-height: 1.5;
  margin: 2px 0;
  cursor: pointer;
  font-size: 24px;
  border-bottom: 2.4px solid #2F2F36;
  padding: 8px 0 13px;
}

.c5 a,
.c5 div {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgba(255,255,255,0.75);
  display: block;
}

.c6 {
  margin: 10px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  color: #FFF;
  font-size: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 12px 0;
}

.c1 {
  word-break: break-word;
}

.c2 {
  word-break: break-word;
}

.c19 {
  height: 155px;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c20 {
  bottom: 0;
  width: 100%;
  padding: 40px 0 36px;
  position: fixed;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c22 {
  width: calc(50% - 5px);
  max-width: 240px;
}

.c8 {
  display: none;
}

.c9 {
  margin-right: 20px;
  overflow: hidden;
}

.c10 {
  color: #FFF;
}

.c11 {
  color: #FFF;
}

.c13 {
  width: 20%;
}

.c15 {
  width: 60%;
  text-align: center;
  color: #71737e;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 24px;
}

.c16 {
  width: 20%;
}

.c18 {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:1050px) {
  .c0 {
    display: none;
  }
}

@media (min-width:1050px) {
  .c3 {
    padding-bottom: 20px;
    max-height: calc(100vh - 154px);
  }
}

@media (min-width:1050px) {
  .c21 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1050px) {
  .c20 {
    position: fixed;
    width: calc(100% - 40px);
    background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
    width: 1000px;
  }
}

@media (min-width:1050px) {
  .c22 {
    width: 240px;
  }
}

@media (min-width:1050px) {
  .c14 {
    display: block;
  }
}

@media (min-width:1050px) {
  .c8 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin: 60px 0 40px 0;
    min-height: 63px;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className=""
  >
    <div
      className="c0"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className=""
          >
            <h2
              className="c1"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Blocks
            </h2>
            <h1
              className="c2"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderOpenMenuBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 10 60"
          >
            <path
              d="M5 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "absolute",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className=""
        >
          <div
            className=""
          >
            <h2
              className="c1"
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Blocks
            </h2>
            <h1
              className="c2"
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <a
                href="/project/"
                id="projectsNavBtn"
                onClick={[Function]}
              >
                Projects
              </a>
            </div>
            <div
              className="c5"
            >
              <a
                href="/user/"
                id="usersNavBtn"
                onClick={[Function]}
              >
                Users
              </a>
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <a
                href="/settings"
                id="settingsNavBtn"
                onClick={[Function]}
              >
                Settings
              </a>
            </div>
            <div
              className="c5"
            >
              <div
                onClick={[Function]}
              >
                Log out
              </div>
            </div>
          </div>
          <div
            className="c6"
          >
            <a
              className="c7"
              href="/"
              id="aboutNavBtn"
              onClick={[Function]}
            >
              About Schema CMS
            </a>
            <a
              className="c7"
              href="/"
              id="apiNavBtn"
              onClick={[Function]}
            >
              API Doc
            </a>
            <a
              className="c7"
              href="/"
              id="repositoryNavBtn"
              onClick={[Function]}
            >
              GitHub Repository
            </a>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        <h2
          className="c10"
          id="desktopHeaderTitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Blocks
        </h2>
        <h1
          className="c11"
          id="desktopHeaderSubtitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          Overview
        </h1>
      </div>
      <div
        className=""
      />
    </div>
    <div
      className="c12"
    >
      <div
        className="c13"
      >
        <div
          className="c14"
        >
          <button
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#FFF",
                "border": "none",
                "borderRadius": "48px",
                "color": "#000",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#000",
                  "height": "60px",
                  "shapeRendering": "crispEdges",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="c15"
      >
        1 Block
      </div>
      <div
        className="c16"
      />
    </div>
    <form
      onSubmit={[Function]}
    >
      <span>
        <div
          id="blocksCheckboxGroup"
          style={
            Object {
              "borderTop": "1px solid #2F2F36",
              "display": "flex",
              "flexDirection": "column",
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "alignItems": "center",
                  "borderBottom": "1px solid #2F2F36",
                  "color": "#FFF",
                  "display": "flex",
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "space-between",
                  "width": "100%",
                }
              }
            >
              <input
                aria-hidden={true}
                checked={true}
                id="checkbox-0"
                name="pageBlocks"
                onChange={[Function]}
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                  }
                }
                type="checkbox"
                value="1"
              />
              <span
                style={
                  Object {
                    "overflow": "hidden",
                    "textOverflow": "ellipsis",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                <div
                  className="c17"
                >
                  <a
                    className="c18"
                    href="/block/1"
                    onClick={[Function]}
                  >
                    block 1
                  </a>
                </div>
              </span>
              <div
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  }
                }
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": "30px",
                      "width": "30px",
                    }
                  }
                  viewBox="0 0 30 30"
                >
                  <path
                    d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                    fillRule="evenodd"
                  />
                </svg>
                <label
                  htmlFor="checkbox-0"
                  style={
                    Object {
                      "cursor": "pointer",
                    }
                  }
                >
                  <svg
                    stroke="#000"
                    style={
                      Object {
                        "height": "30px",
                        "stroke": "#FFF",
                        "width": "30px",
                      }
                    }
                    viewBox="0 0 30 30"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M20.455 7.5H7.5v15h15v-6.136"
                        strokeLinecap="square"
                        strokeLinejoin="round"
                      />
                      <path
                        d="M11 12l5 5L26 7"
                        strokeWidth={3}
                      />
                    </g>
                  </svg>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c19"
        >
          <div
            className="c20"
          >
            <div
              className="c21"
            >
              <button
                disabled={false}
                onClick={[Function]}
                style={
                  Object {
                    "backgroundColor": "#1d1d20",
                    "border": "none",
                    "borderRadius": "48px",
                    "color": "#FFF",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fill": "#FFF",
                    "fontSize": "18px",
                    "height": "60px",
                    "margin": "0",
                    "minHeight": "48px",
                    "outline": "none",
                    "padding": "0",
                    "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                    "width": "60px",
                  }
                }
                type="button"
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": "60px",
                      "width": "60px",
                    }
                  }
                  viewBox="0 0 60 60"
                >
                  <path
                    d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
                  />
                </svg>
              </button>
              <button
                className="c22"
                disabled={true}
                style={
                  Object {
                    "backgroundColor": "#1d1d20",
                    "border": "none",
                    "borderRadius": "48px",
                    "color": "#71737e",
                    "cursor": "default",
                    "display": "inline-block",
                    "fill": "#FFF",
                    "fontSize": "18px",
                    "margin": "0",
                    "minHeight": "48px",
                    "outline": "none",
                    "padding": "0",
                    "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                  }
                }
                type="submit"
              >
                Save
              </button>
            </div>
          </div>
        </div>
      </span>
    </form>
  </div>
</div>
`;
